2003-06-12  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c:  HIG'ify the options tab again as per the
	HIG, "Do not assign access keys to tab labels".

2003-06-12  Jody Goldberg <jody@gnome.org>

	* switcher.c (gkb_button_press_event_cb) : delete more unused code.

	* prop-add.c (lang_data_free) : new.
	(country_data_free) : new.
	(tree_create) : avoid massive leak, and re-org to be sane.
	(comparefunc) : fix to always return something.

2003-06-12  Jody Goldberg <jody@gnome.org>

	* gkb.c (find_input_client) : delete.  Nothing calls it.
	  it uses raw X data structures.
	(check_client) : ditto.
	* switcher.c (find_input_client) : delete this copy too.
	(check_client) : ditto.

2003-06-12  Jody Goldberg <jody@gnome.org>

	* Initial reorg to make the pref dialog available as a standalone app
	  in preparation for making it part of a capplet.
	  While in here, clean up the gconf usage.

2003-06-05  Kevin Vandersloot

	* prop.c: remove the size option from the UI. Fixes bug #76223 since
	the default behavior is sane and saves space.
	
	* gkb.c: Expand for Fitts' law. Set button_click signal to the applet for full Fitts' law
	effect. Change the sizing of the pixbufs so they look better. Also change the dafult name
	to default not gkb. Fixes bug #94153
	
	* descs/default.keymap.in: change name to Default

2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-add.c, prop-map.c:  HIGify the action area of the 
	various dialogs.

2003-05-13  Kevin Vandersloot <kfv101@psu.edu>

	* gkb.c: remove handlers on exit. Patch by Muktha Narayan. Fixes
	bug #112076

2003-05-12  Kevin Vandersloot <kfv101@psu.edu>

	* descs/Syriac.keyprop.in,Syriac_Phonetic.keyprop.in: Add Syriac keymap.
	Patch from Emil Soleyman-Zomalan. Fixes bug #108154

2003-05-06  Sanlig Badral  <badral@users.sf.net>

	* descs/MN_Mongolian.keyprop.in, descs.sun/MN_Mongolian.keyprop.in,
	* xmodmap/xmodmap.mn, xmodmap.sun/xmodmap.mn : Added mongolian
	* keyboard.
	