@@ -1,3 +1,9 @@
+2003-06-18  Kaushal Kumar <kaushal.kumar@wipro.com>
+
+	* prop-map.c (gkb_prop_map_close_clicked) : Have default values 
+	for Name and Label when left empty. Fixes bug #115269.
+	Fixed few memory leaks. 
+
 2003-06-12  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* prop.c:  HIG'ify the options tab again as per the
